logs/lrsignature.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/LRSignature'...
Listing './lib/python3.5/site-packages/LRSignature/bencode'...
Compiling './lib/python3.5/site-packages/LRSignature/cmd.py'...
***   File "./lib/python3.5/site-packages/LRSignature/cmd.py", line 50
    print json.dumps({ "documents": signedList })
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/LRSignature/sign'...
Compiling './lib/python3.5/site-packages/LRSignature/sign/Sign.py'...
***   File "./lib/python3.5/site-packages/LRSignature/sign/Sign.py", line 92
    print "Dropping number: {0}\n".format(obj)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/LRSignature/tests'...
Listing './lib/python3.5/site-packages/LRSignature/util'...
Compiling './lib/python3.5/site-packages/LRSignature/util/__init__.py'...
***   File "./lib/python3.5/site-packages/LRSignature/util/__init__.py", line 57
    print "Key count: {0}; URL:{1}".format(len(keys),url)
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/LRSignature/verify'...
Listing './lib/python3.5/site-packages/LRSignature-0.1.15.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_gnupg-0.4.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
